# coldfront-plugin-nese

./: .gitignore  README.md  TODO.md  quotaman.sh  requirements.txt  setup.cfg
skaffold/: Dockerfile  Dockerfile1  docker-compose-minio.yaml  kustomization.yaml  local_settings.py  minio_deployment.yaml  minio_service.yaml  nese_configmap.yaml  nese_secrets.yaml  run_coldfront.sh  skaffold.yaml
skaffold/vault/: kustomization.yaml  vault_deployment.yaml  vault_namespace.yaml  vault_pvc.yaml  vault_service.yaml
src/coldfront_plugin_nese/: __init__.py  apps.py  attributes.py  config.py  exceptions.py  signals.py  tasks.py  utils.py
src/coldfront_plugin_nese/management/commands/: add_nese_resources.py  register_nese_attributes.py
src/coldfront_plugin_nese/templates/coldfront_plugin_nese/: bucket_provision_failed.html  bucket_quota_failed.html
src/coldfront_plugin_osn/: __init__.py  apps.py  attributes.py  config.py  signals.py  tasks.py  utils.py
src/coldfront_plugin_osn/management/commands/: add_nese_resources.py  register_nese_attributes.py
