[metadata]
name = coldfront_plugin_nese
version = 0.1.0
author = Jim Culbert
author_email = culbertj@mghpcc.org
description = S3 resource allocation plugin for ColdFront
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/culbert/coldfront-plugin-nese
project_urls =
    Bug Tracker = https://github.com/culbert/coldfront-plugin-coldfront_plugin_nese/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    coldfront >= 1.0.4
    boto3
    rgwadmin

[options.packages.find]
where = src
